# ray-tracer

./: Cargo.toml  README.md
images/: README.md
scenes/: cylinders.yaml  glass_spheres.yaml  puppets.yaml
src/: intersection.rs  lib.rs  main.rs  material.rs  matrix.rs  obj.rs  pattern.rs  ray.rs  scene.rs  shape.rs  tuple.rs  yaml_scene.rs
src/shapes/: cone.rs  csg.rs  cube.rs  cylinder.rs  group.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
